--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,9 +10,13 @@ kibana_pid_file: "{{ kibana_pid_dir }}/kibana.pid"
 
 ############
 ##  Package
-kibana_version: 4.4
-kibana_signing_key_url: "https://packages.elastic.co/GPG-KEY-elasticsearch"
-kibana_apt_repo: "deb http://packages.elastic.co/kibana/{{ kibana_version }}/debian stable main"
+kibana_version: 4.4.2
+kibana_major_version:     "{{ kibana_version.split('.')|first }}"
+kibana_minor_version:     "{{ kibana_version.split('.')[1] }}"
+kibana_repo_version:      "{{ kibana_major_version }}.{{ kibana_minor_version }}"
+kibana_signing_key_url:   "https://packages.elastic.co/GPG-KEY-elasticsearch"
+kibana_apt_repo:          "deb https://packages.elastic.co/kibana/{{ kibana_repo_version }}/debian stable main"
+kibana_yum_repo_baseurl:  "https://packages.elastic.co/kibana/{{ kibana_repo_version }}/centos"
 
 ###########################
 ##  Default settings config
