--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,7 @@
 ---
 
-- name: Download and install kibana apt public signing key
-  apt_key: url="{{ kibana_signing_key_url }}" state=present
-
-- name: Add kibana apt repository definition to apt sources list
-  apt_repository: repo="{{ kibana_apt_repo }}" update_cache=yes state=present
-
-- name: Install kibana
-  apt: name=kibana state=present
+- name: Kibana Install
+  include: "install-{{ ansible_os_family|lower }}.yml"
 
 - name: Create kibana config file
   template: 
