--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,13 +3,32 @@
 - name: Kibana Install
   include: "install-{{ ansible_os_family|lower }}.yml"
 
-- name: Create kibana config file
+#- pause: minutes=10
+
+- name: Set kibana config dir for v4.x and earlier
+  set_fact: 
+    kibana_conf_dir: "{{ kibana_install_dir }}/config"
+  when: kibana_major_version|int < 5
+  
+- name: Create kibana config file | v4.x or earlier
   template: 
-    src:   kibana.yml.j2
+    src:   kibana-v4.x.yml.j2
     dest:  "{{ kibana_conf_dir }}/kibana.yml"
     owner: "root"
     group: "root"
     mode:  0644
+  when: kibana_major_version|int < 5
+  notify: 
+    - Restart kibana
+
+- name: Create kibana config file | v5.x or later
+  template: 
+    src:   kibana-v5.x.yml.j2
+    dest:  "{{ kibana_conf_dir }}/kibana.yml"
+    owner: "root"
+    group: "root"
+    mode:  0644
+  when: kibana_major_version|int >= 5
   notify: 
     - Restart kibana
 
@@ -22,6 +41,14 @@
     mode:  0644
   notify: 
     - Restart kibana
+
+- name: Create kibana pid dir
+  file: 
+    path:  "{{ kibana_pid_dir }}"
+    owner: "{{ kibana_user }}"
+    group: "{{ kibana_user }}"
+    mode:  0755
+    state: directory
   
 - name: Start kibana
   service: name=kibana enabled=yes state=started
