--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,6 +14,8 @@ platforms:
     driver:
       box: bento/ubuntu-14.04
   - name: centos-7.2
+    driver:
+      box: bento/centos-7.2
 
 suites:
   - name: default
