removed plugin for now until install process is repeatable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,7 +67,7 @@ kibana_elasticsearch_requestHeadersWhitelist: [ authorization ]
 kibana_elasticsearch_customHeaders: {}
 kibana_kill_on_stop_timeout: 0
 
-kibana_plugins_install: [x-pack]
+kibana_plugins_install: []
 kibana_plugins_remove:  []
 
 # Kibana v6.x only
